Revert "DLS-13060: [SDIL] Fix misalignment in the 'View the details of your return' section on the return-sent page"

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,9 +11,3 @@
     padding-right: 0px !important;
   }
 }
-
-@media print {
-    .govuk-summary-list__row--no-actions::after {
-        display: none !important
-    }
-}
